# casperpad-ido

./: .rusty-hook.toml  Cargo.toml  Makefile  README.md
.github/workflows/: ci-casper-rust-contract.yml  nightly-scheduled-test.yml
casper-ido/: Cargo.toml
casper-ido-tests/: Cargo.toml
casper-ido-tests-nctl/: package.json
casper-ido-tests/src/: casper_ido_instance.rs  casper_ido_test.rs  lib.rs
casper-ido-tests/wasm/: casper_ido_contract.wasm
casper-ido/src/: casper_ido.rs  data.rs  error.rs  event.rs  lib.rs
casper-ido/src/enums/: bidding_token.rs
casper-ido/src/libs/: merkle_tree.rs  mod.rs  reentrancy_guard.rs
casper-ido/src/structs/: auction.rs
casper_ido/: Cargo.toml
casper_ido/src/: claims.rs  constants.rs  default_treasury_wallet.rs  detail.rs  entry_points.rs  error.rs  invests.rs  main.rs  merkle_tree.rs  owner.rs  pre_invest.rs  project.rs  projects.rs  purse.rs  tiers.rs
casper_ido/src/interfaces/: ierc20.rs
contract/: Cargo.toml
contract/src/: casper_ido.rs  constants.rs  data.rs  default_treasury_wallet.rs  entry_points.rs  error.rs  event.rs  factory.rs  invests.rs  lib.rs  main.rs  merkle.rs  owner.rs  project.rs  projects.rs  treasury_wallets.rs
contract/src/enums/: bidding_token.rs  mod.rs
contract/src/interfaces/: ierc20.rs  ifactory.rs  mod.rs
contract/src/libs/: address_utils.rs  conversion.rs  merkle_tree.rs  mod.rs
contract/src/structs/: auction.rs  mod.rs
src/: main.rs
testing/erc20-test/: Cargo.toml
testing/erc20-test-call/: Cargo.toml
testing/erc20-test/src/: main.rs
testing/tests/: Cargo.toml
testing/tests/src/: integration_tests.rs  utils.rs
testing/tests/wasm/: casper_ido.wasm  erc20_test.wasm  erc20_test_call.wasm  pre_invest.wasm
tests/: Cargo.toml
tests-nctl/: .env.example  package-lock.json  package.json  tsconfig.json
tests-nctl/keys/: public_key.pem  secret_key.pem
tests-nctl/scripts/: change-time-schedules.ts  constants.ts  convert-tier.ts  convert-whitelist.ts  deploy.ts  generate-list.ts  get-contract-values.ts  install-contract.ts  install-contracts.ts  merkletree.ts  run-after-sale-action.ts  run-pre-sale-action.ts  utils.ts
tests-nctl/scripts/client/: FactoryClient.ts  IDOClient.ts  utlis.ts
tests-nctl/scripts/clvalue/: bidding_token.test.ts  bidding_token.ts  index.ts
tests-nctl/scripts/jsonrpc/: index.ts
tests-nctl/scripts/types/: info.ts
tests/src/: casper_ido_instance.rs  casper_ido_test.rs  erc20_instance.rs  factory_contract_instance.rs  integration_tests.rs  lib.rs
tests/wasm/: casper_ido_contract.wasm  contract.wasm  erc20_token.wasm  factory_contract.wasm  pre_create_order.wasm
utils/test-env/: Cargo.toml
utils/test-env/src/: test_env.rs
