[package]
name = "casper-ido-tests"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = { version = "1.4.4", default-features = false, features = ["test-support"] }
casper-engine-test-support = { version = "2.1.0", features = ["test-support"] }
casper-execution-engine = "2.0.0"
casper-types = "1.5.0"
casper-hashing = "1.4.3"
test-env = { path = "../utils/test-env" }
contract-utils = { path = "../utils/contract-utils" }
casper-ido = { path = "../casper-ido"}
hex = "0.4.3"
blake2 = "0.10.4"

[features]
default = ["casper-contract/std", "casper-types/std", "casper-contract/test-support"]
