[package]
name = "casper_ido"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casper-erc20 = "0.2.1"
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false }
chrono = "0.4"
serde ={ version="1.0.136",features = ["derive"] }
serde_json="1.0.79"
"rs_merkle"="1.2.0"
[[bin]]
name = "casper_ido"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

