[package]
name = "casper_ido"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
casper-erc20 = "0.2.1"
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false }
chrono = "0.4"
tiny-keccak={version = "2.0.2", features = ["keccak"]}
[[bin]]
name = "pre_invest"
path = "src/pre_invest.rs"
bench = false
doctest = false
test = false
[[bin]]
name = "casper_ido"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

