[package]
name = "casper-ido-contract"
version = "0.1.0"
edition = "2018"
authors = ["Ryo Kanazawa"]
description = "A Smart contract for implementing IDO for the Casper network."
readme = "README.md"
documentation = ""
homepage = ""
repository = ""
license-file = "../LICENSE"

[dependencies]
casper-contract = "1.4.4"
casper-types = "1.5.0"
hex = { version = "0.4.3", default-features = false }
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
tiny-keccak={version = "2.0.2", features = ["keccak"]}
contract-utils = { path = "../utils/contract-utils" }

[[bin]]
name = "casper_ido_contract"
path = "bin/casper_ido_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "factory_contract"
path = "bin/factory_contract.rs"
bench = false
doctest = false
test = false

[[bin]]
name = "pre_create_order"
path = "bin/pre_create_order.rs"
bench = false
doctest = false
test = false



[profile.release]
codegen-units = 1
lto = true

